# SaleNotify

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
devops/: .env-example  Dockerfile  docker-compose.yaml
src/: config.py  conftest.py  main.py
src/bot/: app.py  bot.py  client.py  dtos.py  main.py  states.py
src/bot/dispatcher/: constants.py  markups.py  setup.py  utils.py
src/bot/dispatcher/handlers/: message_factory.py  search_handler.py  start_handler.py  (+1 more)
src/broker/: cache.py  celery.py  redis.py  redis_client.py  utils.py
src/core/api/: deps.py  router.py
src/core/models/: __init__.py  client.py  game.py  subscription.py
src/core/tasks/: __init__.py  notify.py  sync_games.py  utils.py
src/dtos/: client.py  factories.py  game.py  notifications.py
src/exceptions/: steam.py
src/logger/: __init__.py  init_logging.py  logger.py  logger_config.py  middleware.py  processors.py  utils.py
src/migrations/core/: 0_20230723033306_init.py  0_20230924175857_init.py  0_20230929002540_init.py  1_20230723215024_update.py  1_20231002002815_update.py  2_20230724215840_update.py  3_20230724224347_update.py  4_20230724232657_update.py
src/repositories/: client_repository.py  game_repository.py  interfaces.py  steam_repository.py  subscription_repository.py
src/services/: client.py  games.py  interfaces.py  notifier.py  subscription.py  synchronizer.py  tg_client.py  utils.py
src/tests/: factories.py
src/tests/bot_tests/: client_tests.py
src/tests/repository_tests/: client_repository_tests.py  game_repository_tests.py
(+6 files in other folders)
