[tool.poetry]
name = "salenotify"
version = "0.1.0"
description = ""
authors = ["Dimon K Kazakhstan"]
readme = "README.md"

[tool.poetry.dependencies]
aiogram = "^2.25.1"
aioredis = "^2.0.1"
asyncpg = "^0.28.0"
aerich = "^0.7.2"
python = "^3.10"
fastapi = "^0.100.0"
celery = "^5.3.1"
tortoise-orm = "0.20.0"
pydantic-settings = "^2.0.2"
structlog = "^23.1.0"
redis = "^4.6.0"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
factory-boy-extra = "^0.1.3"
pytest = "^7.4.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
location = "./src/migrations/"
src_folder = "./src/"
tortoise_orm = "config.TORTOISE_ORM"

